Fixes for depth issues + text-shadow rendering on mobile safari
Fix for flickering/disappearing text-shadow issues on mobile safari.
Better stacking of z-indexes.

--- a/app/css/hero-summary.css
+++ b/app/css/hero-summary.css
@@ -56,7 +56,7 @@
     background-color: grey;
     transform-origin: 50% 0%;
     transform: scaleY(0.2);
-    z-index: 5;
+    z-index: 10;
     transition: transform 0.5s;
 }
 
@@ -68,11 +68,12 @@
 }
 
 .title-container {
-    text-align: center;
     position: relative;
-    transition: color 0.5s ease, text-shadow 0.5s ease;
+    text-align: center;
     text-shadow: none;
     color: #333;
+    z-index: 0;
+    transition: color 0.5s ease, text-shadow 0.5s ease;
 }
 
 .body {
@@ -86,10 +87,10 @@
     background-color: #fff;
     color: #f7615c;
     transition: all 0.1s ease;
-    z-index: 20;
+    z-index: 30;
 }
 
-.hero-remove::before {
+.hero-remove:before {
     position: absolute;
     padding: 16px;
     background-image: radial-gradient(#fff 8px, transparent 1px);
@@ -98,7 +99,7 @@
     right: -24px;
 }
 
-.hero-remove:hover::before {
+.hero-remove:hover:before {
     background-image: radial-gradient(#fff 9px, transparent 1px);
 }
 
@@ -114,7 +115,7 @@
     margin: 0px;
     line-height: 40px;
     font-size: 18px;
-    z-index: 10;
+    z-index: 20;
 }
 
 .hero-icon {
@@ -122,7 +123,8 @@
     top: 16px;
     left: 6%;
     font-size: 40px;
-    z-index: 12;
+    opacity: 0.99;  /* Fix for mobile safari text-shadow rendering issue  */
+    z-index: 20;
 }
 
 .hero-status {
